// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagDelete Dialog Closed Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></div>
  <div class="v-list-item__content">
    <div data-test="remove-title" class="v-list-item__title text-left">Remove</div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`TagDelete Dialog opened Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></div>
  <div class="v-list-item__content">
    <div data-test="remove-title" class="v-list-item__title text-left">Remove</div>
  </div>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
